--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="THREE.TargetCamera.min.js"></script>
-    <script src="game.js"></script>
+    <script src="utils/THREE.TargetCamera.min.js"></script>
+    <script src="scripts/game.js"></script>
 
 
 </head>
@@ -34,7 +34,7 @@
 <div id="modal1" style="width:30%;" class="modal white">
     <div class="modal-content">
         <h4 class="center-align">HOW TO PLAY?</h4><br>
-        <img style="width:100%;" class="responsive-img animated zoomInUp center-align" src="twoarrowKeys.png">
+        <img style="width:100%;" class="responsive-img animated zoomInUp center-align" src="images/twoarrowKeys.png">
         <h5 class="center-align">JUST USE YOUR ARROW-KEYS</h5>
 
     </div>
@@ -74,7 +74,7 @@
 
 
     <div class="col s8">
-        <img class="responsive-img animated zoomInUp" src="slogo2.png">
+        <img class="responsive-img animated zoomInUp" src="images/slogo2.png">
     </div>
 
     <div class="col s3">
