--- a/touch.html
+++ b/touch.html
@@ -25,8 +25,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-    <script src="THREE.TargetCamera.min.js"></script>
-    <script src="game.js"></script>
+    <script src="utils/THREE.TargetCamera.min.js"></script>
+    <script src="scripts/game.js"></script>
 
 </head>
 
@@ -35,7 +35,7 @@
     <div id="modal1" style="width:30%;" class="modal white">
         <div class="modal-content">
             <h4 class="center-align">HOW TO PLAY?</h4><br>
-            <img style="width:100%;" class="responsive-img animated zoomInUp center-align" src="twoarrowKeys.png">
+            <img style="width:100%;" class="responsive-img animated zoomInUp center-align" src="images/twoarrowKeys.png">
             <h5 class="center-align">JUST USE YOUR ARROW-KEYS</h5>
 
         </div>
@@ -94,7 +94,7 @@
 
 
 
-        <img class="responsive-img animated zoomInUp" style="width:100%;" src="slogo2.png">
+        <img class="responsive-img animated zoomInUp" style="width:100%;" src="images/slogo2.png">
 
         <br><br>
         <a style="width:30%;" class="waves-effect waves-light center btn btn-large green animated flipInY" onclick="startGameLoop();"><i class="material-icons">play_arrow</i></a>
